--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,5 +19,16 @@ services:
     volumes:
       - db-store:/var/lib/mysql
 
+  phpmyadmin:
+    container_name: phpmyadmin
+    image: phpmyadmin/phpmyadmin
+    environment:
+    - PMA_ARBITRARY=1
+    - PMA_HOSTS=db
+    - PMA_USER=phper
+    - PMA_PASSWORD=secret
+    ports:
+    - 8080:80
+
 volumes:
   db-store:
